static/css/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;700&family=Germania+One&display=swap');

* {
    font-family: Dosis, Georgia, 'Times New Roman', Times, serif;
    font-size: 1.2rem;
    font-weight: 400;
}

body {
    background-attachment: fixed;
    background-blend-mode: screen;
    background-image: -o-linear-gradient(45deg, rgb(220,220,220) 0 50%, rgb(220,220,220)), url("/static/images/jpg/page_bg.jpg");
    background-image: linear-gradient(45deg, rgb(220,220,220) 0 50%, rgb(220,220,220)), url("/static/images/jpg/page_bg.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    min-height: 100vh;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
}

header a.brand-logo {
    font-family: 'Germania One', Georgia, 'Times New Roman', Times, serif;
    padding:  0 15px;
}

header a.brand-logo:hover,
.footer-link:hover {
    color: #000;
    -webkit-transition: 0.3s;
    -o-transition: 0.3s;
    transition: 0.3s;
}

.footer-link {
    color: white;
}
footer {
    margin-top: auto;
}

/*Scrollbar code from https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp*/
::-webkit-scrollbar {
    width: 8px;
}

::-webkit-scrollbar-track {
  background: white;
}

/* Handle */
::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background: grey;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #900000;
}

/* Return to top button code from @rdallaire on CodePen https://codepen.io/rdallaire/pen/apoyx */
#return-to-top {
    position: fixed;
    bottom: 5px;
    right: 5px;
    background: rgb(0, 0, 0);
    background: rgba(0, 0, 0, 0.7);
    width: 40px;
    height: 40px;
    z-index: 100;
    display: block;
    text-decoration: none;
    border-radius: 15px;
    display: none;
    -webkit-transition: all 0.3s linear;
    -o-transition: all 0.3s ease;
    -webkit-transition: all 0.3s ease;
    transition: all 0.3s ease;
}
#return-to-top i {
    color: #fff;
    margin: 0;
    position: relative;
    left: 11px;
    top: 8px;
    font-size: 22px;
    -webkit-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
}
/* Code for fixing hover state for touchscreen devices https://medium.com/@mezoistvan/finally-a-css-only-solution-to-hover-on-touchscreens-c498af39c31c */
@media (hover: hover) and (pointer: fine) {
#return-to-top:hover {
    background: rgba(0, 0, 0, 0.9);
    width: 40px;
    height: 50px;
}
#return-to-top:hover i {
    top: 5px;
}
}
/*Index page setting*/
.container__index h1 {
    font-family: 'Germania One';
    color: #d60000;
    padding-top: 40px;
    text-shadow:
        -1px 1px 2px #000,
        1px 1px 2px #000,
        1px -1px 0 #000,
        -1px -1px 0 #000;
}

.container__index h1 span {
    display: block;
    color: #fff;
    font-size: 65%;
    font-weight: 400;
}

/*Index landing video settings */
/*Help in the code from https://redstapler.co/responsive-css-video-background/ */
.bg-video {
    position: fixed;
    top: 0;
    left: 0;
    z-index: -10;
    -o-object-fit: cover;
       object-fit: cover;
}

.bg-video__content{
    position:fixed;
    z-index: -1;
    opacity: .15;
}

@media (min-aspect-ratio: 16/9) {
    .bg-video__content {
        width:100%;
        height: auto;
    }
}
@media (max-aspect-ratio: 16/9) {
    .bg-video__content { 
        width:auto;
        height: 100%;
    }
}
@media (max-width: 767px) {
    .bg-video__content {
        display: none;
    }
}

/* Background image setting across all pages */
.page_bg {
    background-image: -o-linear-gradient(45deg, rgb(220,220,220) 0 50%, rgb(220,220,220)), url("/static/images/jpg/page_bg.jpg");
    background-image: linear-gradient(45deg, rgb(220,220,220) 0 50%, rgb(220,220,220)), url("/static/images/jpg/page_bg.jpg");
    background-blend-mode: screen;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

/* card settings */
/*reviews card*/
.card .card-title {
    font-weight: 400;
}

.recommend {
    font-style: italic;
    font-size: 1.5rem;
}

.recommend span {
    font-weight: 700;
}

#searchbox {
    margin-top: 0;
    padding-top: 10px;
    padding-bottom: 0;
}

/*Styling for placing the quote symbol on review card*/
.bike-review{
    position: relative;
    min-height: 17rem;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
}

.bike-review::before{
    content: "\201C";
    position: absolute;
    top: -6rem;
    left: 1rem;
    line-height: 1;
    font-size: 12rem;
    color: lightgray;
    font-family: sans-serif;
}

/*profile card*/
.profile {
    height: 20vh;
}

.hello {
    padding-left: 20px;
}

.profile-bg {
    background-image: -o-linear-gradient(45deg, rgba(240,240,240, 0.95) 0 50%, rgba(240,240,240, 0.95)), url("../images/jpg/user_bg.jpg");
    background-image: linear-gradient(45deg, rgba(240,240,240, 0.95) 0 50%, rgba(240,240,240, 0.95)), url("../images/jpg/user_bg.jpg");
    background-blend-mode: screen;
    background-repeat: no-repeat;
    background-size: cover;
}

/*categories card*/
.category_bg {
    background-image: -o-linear-gradient(45deg, rgba(240,240,240, 0.95) 0 50%, rgba(240,240,240, 0.95)), url("../images/jpg/category_bg.jpg");
    background-image: linear-gradient(45deg, rgba(240,240,240, 0.95) 0 50%, rgba(240,240,240, 0.95)), url("../images/jpg/category_bg.jpg");
    background-blend-mode: screen;
    background-repeat: no-repeat;
    background-size: cover;
}

/* Helpers */
/* padding-bottom*/
.p-b {
    margin-bottom: 0;
    padding-bottom: 47px;
}
/* padding-top*/
.p-t {
    margin-top: 0;
    padding-top: 47px;
}

.p-t__small {
    margin-top: 0;
    padding-top: 12px;
}

#smallprint {
    font-size: 0.9rem;
}

/*Flash messages*/
.flashes h5 {
    line-height: 2;
}

/*Overwriting Materialize CSS*/
input:not([type]):focus:not([readonly]), 
input[type=text]:not(.browser-default):focus:not([readonly]), 
input[type=password]:not(.browser-default):focus:not([readonly]), 
input[type=email]:not(.browser-default):focus:not([readonly]), 
input[type=url]:not(.browser-default):focus:not([readonly]), 
input[type=time]:not(.browser-default):focus:not([readonly]), 
input[type=date]:not(.browser-default):focus:not([readonly]), 
input[type=datetime]:not(.browser-default):focus:not([readonly]), 
input[type=datetime-local]:not(.browser-default):focus:not([readonly]), 
input[type=tel]:not(.browser-default):focus:not([readonly]), 
input[type=number]:not(.browser-default):focus:not([readonly]), 
input[type=search]:not(.browser-default):focus:not([readonly]), 
textarea.materialize-textarea:focus:not([readonly]) {
    border-bottom: 1px solid rgb(0, 0, 0);
    -webkit-box-shadow: 0 1px 0 0 rgb(0, 0, 0);
    box-shadow: 0 1px 0 0 rgb(0, 0, 0);
}

input:not([type]):focus:not([readonly])+label, 
input[type=text]:not(.browser-default):focus:not([readonly])+label, 
input[type=password]:not(.browser-default):focus:not([readonly])+label, 
input[type=email]:not(.browser-default):focus:not([readonly])+label, 
input[type=url]:not(.browser-default):focus:not([readonly])+label, 
input[type=time]:not(.browser-default):focus:not([readonly])+label, 
input[type=date]:not(.browser-default):focus:not([readonly])+label, 
input[type=datetime]:not(.browser-default):focus:not([readonly])+label, 
input[type=datetime-local]:not(.browser-default):focus:not([readonly])+label, 
input[type=tel]:not(.browser-default):focus:not([readonly])+label, 
input[type=number]:not(.browser-default):focus:not([readonly])+label, 
input[type=search]:not(.browser-default):focus:not([readonly])+label, 
textarea.materialize-textarea:focus:not([readonly])+label {
    color: rgb(0, 0, 0);
}

/*Media queries*/
@media only screen and (min-width:1400px){
    .bike-review {
        min-height: 13rem;
    }
}

@media only screen and (min-width:1235px) {
    .bike-review{
        min-height: 14rem;
    }
}

@media only screen and (max-width:992px) {
    .bike-review{
    min-height: 11rem;
 }
}

